--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "hosting101",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Comprehensive video guides on hosting your next application",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Chaitanya Karanam",
   "dependencies": {
     "gatsby": "^2.24.61",
     "gatsby-image": "^2.4.19",
@@ -36,9 +36,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/ChaitanyaKaranam/hosting101"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/ChaitanyaKaranam/hosting101/issues"
   }
 }
